--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -51,7 +51,7 @@ p {
 
 
 /* header */
-header {
+header .container {
   display: flex;
   background-color: white;
   height: 4rem;
@@ -59,7 +59,31 @@ header {
   z-index: 1;
   align-items: center;
   width: 100%;
-  justify-content: flex-start;
+  justify-content: space-between;
+  flex: 1 1;
+}
+
+@media only screen and (max-width: 470px) {
+ nav ul li {
+    display: none;
+  }
+
+  .logo {
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  header span {
+    display: none;
+  }
+
+
+}
+
+@media only screen and (min-width: 470px){
+header .logo .mobile {
+  display: none;
+ }
 }
 
 header nav {
@@ -69,12 +93,15 @@ header nav {
 nav {
   display: block;
 }
-
 .logo {
+  display: flex;
+  align-items: center;
+}
+
+.logo .desktop {
   align-items: center;
   display: flex;
   padding-left: 1.5em;
-  flex-grow: 1;
 }
 
 .logo img {
@@ -141,6 +168,23 @@ nav {
   padding: .5em;
   width: 80%;
   text-align: center;
+}
+
+@media only screen and (max-width 470px) {
+  .banner .container {
+    flex-direction: column;
+    padding: 0;
+    align-items: center;
+  }
+
+  .banner .left-column {
+    width: 100%;
+    margin: 0;
+  }
+
+  .banner .left-column img {
+    width: 100%;
+  }
 }
 
 /* Information */
