--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -48,8 +48,6 @@ p {
   line-height: 1.5rem;
 }
 
-
-
 /* header */
 header .container {
   display: flex;
@@ -61,29 +59,6 @@ header .container {
   width: 100%;
   justify-content: space-between;
   flex: 1 1;
-}
-
-@media only screen and (max-width: 470px) {
- nav ul li {
-    display: none;
-  }
-
-  .logo {
-    width: 100%;
-    justify-content: space-around;
-  }
-
-  header span {
-    display: none;
-  }
-
-
-}
-
-@media only screen and (min-width: 470px){
-header .logo .mobile {
-  display: none;
- }
 }
 
 header nav {
@@ -124,6 +99,10 @@ nav {
   display: inline-block;
   padding: 0.5em;
   color: #696969;
+}
+
+header .mobile {
+  display: none;
 }
 
 /* banner */
@@ -168,23 +147,6 @@ nav {
   padding: .5em;
   width: 80%;
   text-align: center;
-}
-
-@media only screen and (max-width 470px) {
-  .banner .container {
-    flex-direction: column;
-    padding: 0;
-    align-items: center;
-  }
-
-  .banner .left-column {
-    width: 100%;
-    margin: 0;
-  }
-
-  .banner .left-column img {
-    width: 100%;
-  }
 }
 
 /* Information */
@@ -293,6 +255,10 @@ nav {
 #courses span {
   line-height: 2em;
 }
+
+#information .mobile-image {
+  display: none;
+}
 /*thesis*/
 
 #thesis h2 {
@@ -338,4 +304,147 @@ footer .legal {
 
 .legal span {
   padding-left: .5rem;
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+  html,
+  body {
+    background: #FAFAFA;
+  	color: #0E2424;
+  	margin: 0;
+    width: auto;
+  	}
+
+/*header*/
+ nav ul li {
+    display: none;
+  }
+
+  .logo {
+    width: 100%;
+    justify-content: space-around;
+  }
+
+  header span {
+    display: none;
+  }
+
+  .logo img {
+    margin: 0 1.5rem;
+    width: auto;
+  }
+
+
+  /*banner*/
+  .banner {
+    padding-top: 2rem;
+  }
+  .banner .container {
+    flex-direction: column;
+  }
+
+  .banner .left-column {
+    width: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .banner .left-column img {
+    width: 100%;
+  }
+
+  .banner .right-column {
+    padding: 0;
+    width: 100%;
+    text-align: left;
+  }
+
+  .banner h1 {
+	font-size: 2rem;
+  line-height: normal;
+  margin: 2rem 1rem 0.5rem 1rem;
+  padding: 0;
+  }
+
+  .banner h4 {
+  font-size: 1.25rem;
+  margin: 0rem 1rem 1rem 1rem;
+  }
+
+  .banner .button {
+  margin: 1rem 1rem 2rem 1rem;
+  width: auto;
+  }
+
+  #information .info-left {
+    display: none;
+  }
+
+  #information .right-column {
+    width: 100%;
+    padding: 1em;
+    border: none;
+    height: auto;
+  }
+
+  #information .image-content {
+    flex-direction: column;
+    border-top: none;
+  }
+
+  #information .image {
+    display: none
+  }
+
+  #information .mobile-image {
+    width: 100%;
+  }
+
+  #courses {
+    background-color: white;
+  }
+
+  #courses .column {
+    flex-direction: column;
+    padding: 0 0;
+    width: 100%;
+    margin: 1rem 0rem 2rem 0rem;
+  }
+
+  #courses .column .image-content {
+    margin: 0 0;
+    padding: 0.25rem 1rem;
+    width: 90%;
+  }
+
+  #courses .column .image-content .image-info {
+    display: flex;
+    background-color: lightgrey;
+  }
+
+  #courses img,
+  #courses span,
+  #courses p {
+    display: none;
+  }
+
+  #thesis .container {
+    flex-direction: column;
+    padding: 1rem 0 1.5rem 0;
+  }
+
+  #thesis .left-column {
+    padding: 0;
+    width: auto;
+  }
+
+  #thesis .right-column,
+  #thesis .video-info {
+    display: none;
+  }
+
+  footer .legal {
+    display: none;
+  }
+  }
 }
